# prj-ssm-template

./: .gitignore  README.md  playbook.yml  pyproject.toml
.circleci/: config.yml
