[tool.poetry]
name = "lambda-runtime-tweeter-ssm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
ansible = "^2.9.4"
boto3 = "^1.11.9"
jinja2 = "^2.11.1"
pyyaml = "^5.3"
cryptography = "^2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
